--- a/WEBSITE REAL/about.html
+++ b/WEBSITE REAL/about.html
@@ -13,5 +13,13 @@
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
+<h1> Production Work</h1>
+<p> At the University of New Haven I have served as the Social Media Head for the show "Pitch Perfect with Mike Maguire" and the Assistant Producer of the show "On The Spot."</p>
+<h1>My Hobbies</h1>
+<p>My hobbies include going to concerts, working on productions, and much more. I haven't been to any concerts recently because of school but I have a few coming in the future. They are a fun way to pass time with friends. I have been to over 40 concerts in my life which is a bit extreme, however, it has been worth it every time. The most recent concert I went to was Niall Horan at the Xfinity Theater in Hartford.  </p>
+<h1> Favorite Movie</h1>
+<img src="monsters__inc___hi_res_textless_poster__by_ihaveanawesomename_d7xivn1-pre.jpg" width="25%" height="25%" alt=""/>
+<h1> Favorite Candy</h1>
+<img src="Twix.jpg" width="25%" height="25%" alt=""/>
 </body>
 </html>
