--- a/WEBSITE REAL/contact.html
+++ b/WEBSITE REAL/contact.html
@@ -13,10 +13,16 @@
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-	You can contact me by:
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/" class="fa fa-facebook" target="_blank"</a>
+<a href="https://twitter.com/home" class="fa fa-twitter"target="_blank"</a>
+<a href="https://www.instagram.com/" class="fa fa-instagram" target="_blank"></a><a href="https://www.linkedin.com/in/sarah-carman-96345b198/" class="fa fa-linkedin" target="_blank"></a>
+
+<br>
 	
-	Email: scarm3@unh.newhaven.edu
-	
-	
+	You can also email me at scarm3@unh.newhaven.edu
 </body>
 </html>
