--- a/WEBSITE REAL/gallery.html
+++ b/WEBSITE REAL/gallery.html
@@ -13,6 +13,12 @@
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-	
+<img src="IMG_8240.jpeg" width="50%" height="50%" alt=""/>
+<p> This is me and my friends from home the night before we left for our Freshman year of college.</p>
+<img src="IMG_1332.jpeg" width="50%" height="50%" alt=""/>
+<p> This is me and my best friend Hayley when I went to visit her at Sacred Heart 
+	University.</p>
+<img src="IMG_0014.jpeg" width="50%" height="50%" alt=""/>
+<p>This is me and my other best friend Mark when we went to New York City for his birthday.</p>
 </body>
 </html>
