--- a/WEBSITE REAL/index.html
+++ b/WEBSITE REAL/index.html
@@ -18,11 +18,10 @@
 	
 <h1>Sarah Carman</h1>
 <img src="../website/unh.jpg" width="20%" height="20%" alt=""/>
-</body><p>I am a Communications student with a concentration in Digital Media at The University of New Haven. I am currently a Sophomore. I live in Celentano Hall, where I am a Resident Assistant.  </p>
+</body><p>I am a Communications student with a concentration in Digital Media at the University of New Haven. I am currently a Sophomore. I live in Celentano Hall, where I am a Resident Assistant.  </p>
 
 <h1>My Hobbies</h1>
 <p>My hobbies include going to concerts, working on productions, and much more. I haven't been to any concerts recently because of school but I have a few coming in the future. They are a fun way to pass time with friends. I have been to over 40 concerts in my life which is a bit extreme, however, it has been worth it every time. The most recent concert I went to was Niall Horan at the Xfinity Theater in Hartford.  </p>
-
 </body>
 </html>
 
